--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   dio: 3.0.10
   sqflite: 1.3.2+3
   path_provider: ^1.6.27
+  select_form_field: ^1.1.0
 
 dev_dependencies:
   flutter_test:
