--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   sqflite: 1.3.2+3
   path_provider: ^1.6.27
   flutter_swiper: ^1.1.6
+  checkbox_formfield: ^0.1.0+3
+  fluttertoast: ^7.1.6
 
 dev_dependencies:
   flutter_test:
