--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   path_provider: ^1.6.27
   flutter_swiper: ^1.1.6
   checkbox_formfield: ^0.1.0+3
+  multiselect_formfield: ^0.1.5
+  select_form_field: "^1.1.0"
+  rflutter_alert: ^1.1.0
 
 dev_dependencies:
   flutter_test:
