--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   multiselect_formfield: ^0.1.5
   select_form_field: "^1.1.0"
   rflutter_alert: ^1.1.0
+  date_format: ^1.0.9
 
 dev_dependencies:
   flutter_test:
